初始化，没完

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app'
+include ':app', ':annotation_compiler', ':annotation_bean', ':lib_common', ':annotation_api', ':component_login', ':component_home'
