--- a/component_home/src/main/AndroidManifest.xml
+++ b/component_home/src/main/AndroidManifest.xml
@@ -1,2 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lyb.besttimer.component_home" />
+    package="com.lyb.besttimer.component_home">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <application>
+        <activity android:name=".HomeActivity"></activity>
+    </application>
+
+</manifest>
