--- a/component_login/src/main/AndroidManifest.xml
+++ b/component_login/src/main/AndroidManifest.xml
@@ -3,7 +3,13 @@
     package="com.lyb.besttimer.component_login">
 
     <application>
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
