--- a/common_util/build.gradle
+++ b/common_util/build.gradle
@@ -27,11 +27,12 @@ dependencies {
 
     compile 'com.android.support:appcompat-v7:26.1.0'
 
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.google.code.gson:gson:2.8.2'
 
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit:2.4.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.4.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
 
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
