--- a/component_home/build.gradle
+++ b/component_home/build.gradle
@@ -12,7 +12,7 @@ android {
 
     defaultConfig {
         if (isModule.toBoolean()) {
-            applicationId "com.lyb.besttimer.modularization"
+            applicationId "com.lyb.besttimer.modularization.home"
         }
         minSdkVersion 15
         targetSdkVersion 26
